force-app/main/default/objects/cgcloud__Mobile_Link__c/cgcloud__Mobile_Link__c.object-meta.xml
<CustomObject>
    <description>Deep Link Object</description>
    <label>Mobile Link</label>
    <nameField>
        <label>Mobile Link Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile Links</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>