force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Active__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Only Active Records must be relevant for display</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>