force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Asset_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Asset_Id__c</fullName>
    <label>Asset Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>