force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Asset_Type__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Asset_Type__c</fullName>
    <label>Asset Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>dashboard</fullName>
            </value>
            <value>
                <fullName>lens</fullName>
            </value>
            <value>
                <fullName>application</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>