force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Dashboard_State__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Dashboard_State__c</fullName>
    <label>Dashboard State</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>