force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Description__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Description__c</fullName>
    <formula>CASE($User.cgcloud__Language_Postfix__c,
&quot;Language1&quot;, cgcloud__Description_Language_1__c,
&quot;Language2&quot;, cgcloud__Description_Language_2__c,
&quot;Language3&quot;, cgcloud__Description_Language_3__c,
&quot;Language4&quot;, cgcloud__Description_Language_4__c,
cgcloud__Description_Language_1__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description</label>
    <type>Text</type>
</CustomField>