force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Display_In__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Display_In__c</fullName>
    <label>Display In</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Your Day</fullName>
            </value>
            <value>
                <fullName>Store Cockpit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>