force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Login_Host__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Login_Host__c</fullName>
    <label>Login Host</label>
    <length>255</length>
    <type>Text</type>
</CustomField>