force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Org_Id__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Org_Id__c</fullName>
    <label>Org Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>