force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Record_Type_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Record_Type_Name__c</fullName>
    <formula>RecordType.DeveloperName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Type Name</label>
    <type>Text</type>
</CustomField>