force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Scheme_Name__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Scheme_Name__c</fullName>
    <label>Scheme Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>sfanalytics</fullName>
            </value>
            <value>
                <fullName>salesforce1</fullName>
            </value>
            <value>
                <fullName>ms-onedrive</fullName>
            </value>
            <value>
                <fullName>whatsapp</fullName>
            </value>
            <value>
                <fullName>https</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>