force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__Sort__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__Sort__c</fullName>
    <description>Sort Order of displayable deep links record within a call</description>
    <label>Sort</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>