force-app/main/default/objects/cgcloud__Mobile_Link__c/fields/cgcloud__URL__c.field-meta.xml
<CustomField>
    <fullName>cgcloud__URL__c</fullName>
    <label>URL</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>