force-app/main/default/objects/cgcloud__Mobile_Link__c/recordTypes/cgcloud__Einstein_Analytics.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Einstein_Analytics</fullName>
    <active>true</active>
    <label>Analytics</label>
</RecordType>