force-app/main/default/objects/cgcloud__Mobile_Link__c/recordTypes/cgcloud__Quick_Access.recordType-meta.xml
<RecordType>
    <fullName>cgcloud__Quick_Access</fullName>
    <active>true</active>
    <label>Quick Access</label>
</RecordType>