force-app/main/default/objects/cgcloud__Mobile_Link__c/validationRules/cgcloud__Dashboard_State_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Dashboard_State_Validation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISPICKVAL(cgcloud__Asset_Type__c, &quot;Dashboard&quot;)), NOT(ISBLANK(cgcloud__Dashboard_State__c)))</errorConditionFormula>
    <errorMessage>Date Value can only be provided if Asset Type is &apos;Dashboard&apos;.</errorMessage>
</ValidationRule>