force-app/main/default/objects/cgcloud__Mobile_Link__c/validationRules/cgcloud__Prevent_Changing_of_Sales_Org.validationRule-meta.xml
<ValidationRule>
    <fullName>cgcloud__Prevent_Changing_of_Sales_Org</fullName>
    <active>true</active>
    <description>The Sales Org can&apos;t be edited after Mobile Link creation.</description>
    <errorConditionFormula>ISCHANGED(cgcloud__Sales_Org__c)</errorConditionFormula>
    <errorMessage>The Sales Org can&apos;t be edited after Mobile Link creation.</errorMessage>
</ValidationRule>